# synthlm

./: README.md  __init__.py  evaluate.py  generate_curriculum.py  pyproject.toml  run_demo.py  task_dyna.py  task_filtro.py  task_inducto.py  task_logic.py
