[project]
name = "synthlm"
version = "0.1.0"
description = "Synthetic pre-training tasks for evaluating language model architectures"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Eric Florenzano" }
]
keywords = [
    "language-models",
    "synthetic-data",
    "benchmark",
    "evaluation",
    "transformers",
    "machine-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies - none required for basic task generation
dependencies = []

[project.optional-dependencies]
# For progress bars in CLI
cli = [
    "tqdm==4.67.1",
]

# For HuggingFace Datasets integration
datasets = [
    "datasets==4.4.2",
    "huggingface-hub==1.2.3",
]

# Full installation with all features
full = [
    "tqdm==4.67.1",
    "datasets==4.4.2",
    "huggingface-hub==1.2.3",
]

# Development dependencies
dev = [
    "tqdm==4.67.1",
    "datasets==4.4.2",
    "huggingface-hub==1.2.3",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "ruff==0.8.6",
    "mypy==1.14.1",
]

[project.scripts]
synthlm-generate = "synthlm.generate_curriculum:main"

[project.urls]
Repository = "https://github.com/ericflo/synthlm"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"__init__.py" = "synthlm/__init__.py"
"task_dyna.py" = "synthlm/task_dyna.py"
"task_inducto.py" = "synthlm/task_inducto.py"
"task_filtro.py" = "synthlm/task_filtro.py"
"task_logic.py" = "synthlm/task_logic.py"
"generate_curriculum.py" = "synthlm/generate_curriculum.py"
"run_demo.py" = "synthlm/run_demo.py"

[tool.hatch.build.targets.sdist]
include = [
    "*.py",
    "README.md",
    "pyproject.toml",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["synthlm"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
